Update for Zookeeper starting.